fix some display/layout bugs in Complex Atoms model
[#30601737]

--- a/src/examples/complex-atoms-model/application.sass
+++ b/src/examples/complex-atoms-model/application.sass
@@ -1,11 +1,15 @@
 @import 'sass/bourbon/bourbon'
 @import 'sass/lab/colors'
 
+html
+  margin: 0em
+  padding: 0em
+
 body
   background: url(../../resources/aspect-ratio-1x1.png) no-repeat -9999px -9999px
 
 #content
-  width: 90%
+  width: 97%
   height: 50em
 
 #viz
@@ -24,9 +28,10 @@ body
     display: inline-block
     vertical-align: top
   .top-right
-    float: right
     position: relative
     display: inline-block
+    margin-right: 0em
+    padding-right: 0em
     vertical-align: top
     .top-right-upper
       position: relative
